--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,15 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
-/node_modules/
-/.pnp
-/.pnp.js
 
-# testing
-/coverage
-
-# production
-/build
-
-# misc
+node_modules/
+build/
+package-lock.json
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+Thumbs.db
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-node_modules/
-package-lock.json
-build/
 .vscode/
 .idea/
-.DS_Store
-Thumbs.db
-favicon.ico
-robots.txt
-manifest.json
-logo.svg
-/.tsbuildinfo  # New addition
+/.tsbuildinfo
+.env*
 
